# fallout-protocol-rs

./: .gitignore  AGENTS.md  Cargo.toml
.github/workflows/: ci-win.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: building.rs  camera.rs  inventory.rs  lib.rs  movement.rs  player.rs
crates/gameplay/tests/: movement.rs
crates/narrative/: Cargo.toml
crates/narrative/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
docs/: architecture.md  plan.md
