[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/world",
    "crates/gameplay",
    "crates/ai",
    "crates/narrative",
    "crates/ui",
    "crates/tools",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Zero Team"]

[workspace.dependencies]
# Add common dependencies here.
# For now, let's add Bevy as it's the core engine.
bevy = "0.13"
