[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/world",
    "crates/gameplay",
    "crates/ai",
    "crates/narrative",
    "crates/ui",
    "crates/tools",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Zero Team"]

[workspace.dependencies]
world = { path = "crates/world" }

# Add common dependencies here.
# For now, let's add Bevy as it's the core engine.
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi-threaded",
    "x11",
    "png",
    "hdr",
    "tonemapping_luts",
] }
